--- a/boot.conf
+++ b/boot.conf
@@ -1,7 +1,17 @@
 no=0
-name=pp-5.14.0-rc6
+name=Arch Linux (xnux.eu)
 dtb=board-1.2.dtb
 atf=fw.bin
 linux=Image
 initramfs=initramfs.img
-bootargs=console=tty1 root=ROOTPART rootfstype=FSTYPE rw rootwait
+bootargs=console=tty1 root=ROOTPART rootfstype=FSTYPE rw rootwait panic=10 loglevel=4 quiet cma=256M systemd.restore_state=0
+splash=arch.bgra
+
+no=1
+name=JumpDrive 0.8
+dtb=board-1.2.dtb
+atf=fw.bin
+linux=Image
+initramfs=pine64-pinephone.img
+bootargs=console=tty1 loglevel=2 quiet vt.global_cursor_default=0
+splash=jumpdrive.bgra
